<resources>
    <string name="app_name">POS_Coffee</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--####################################################    Menu-->

    <string name="menu_home">Home</string>
    <string name="menu_turno">Turno</string>
    <string name="menu_clientes">Clientes</string>
    <string name="menu_productoss">Productos</string>
    <string name="menu_admon">Administración</string>
    <string name="menu_usuarios">Usuarios</string>
    <string name="menu_config">Configuración</string>

    <string name="menu_despejar">Borrar Ticket</string>
    <string name="menu_unir">Unir Ticket</string>
    <!--####################################################    Pagina principal de ventas-->

    <string name="Empresa">Cafe Babilonia</string>
    <string name="Eslogan_empresa">Gracias por tu trabajo</string>

    <string name="Guardar">GUARDAR</string>
    <string name="Cobrar"> COBRAR</string>

    <string name="Buscar_Producto">Buscar producto</string>
    <string name="Filtrar_Por_categoria">Filtrar Por categoria: </string>
    <string name="TituloListaTickets">Tickets Abiertos</string>
    <string name="BotonListaTickets"> + Ticket</string>


    <string name="EliminarDeLista">Eliminar</string>
    <string name="CancelarEliminarDeLista">Cancelar</string>

    <string name="Agregar">+</string>
    <string name="Eliminar">--</string>
    <string name="Externo">EXT</string>
    <string name="Interno">INT</string>

    <string name="Borrar">Borrar</string>
    <string name="Producto">PROD</string>
    <string name="Cantidad">CANT</string>
    <string name="vUnidad">V.UND</string>
    <string name="vTotal">V.TOTAL</string>

    <string name="tProducto">Producto</string>
    <string name="tCant">Cant.</string>
    <string name="tVUnidad">P.Und</string>
    <string name="tVTotal">P.SubTotal</string>
    <string name="title_activity_pag_guardar">PagGuardar</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="SwipeEliminar">Eliminar</string>
    <string name="SwipeDejar">Dejar en lista</string>

    <!-- ################################################### Paginas de Login-->
    <string name="Ingresar_eMail">Ingresar eMail *</string>
    <string name="Ingresar_Clave">Ingresar Clave (alfanúmerica) *</string>
    <string name="Ingresar_ConfirmarClave">Confirma tu clave *</string>
    <string name="NombreTienda">Nombre de tu primera tienda *</string>
    <string name="DireccionTienda">Dirección</string>
    <string name="TelefonoTienda">Telefono</string>
    <string name="CancelarLogin">Cancelar</string>
    <string name="Login">LOGIN</string>
    <string name="Ingresar">INGRESAR</string>
    <string name="Registrarse">REGISTRATE</string>
    <string name="OlvideClave">Olvidaste tu clave?</string>
    <string name="ReestablecerClave">Reestablecer clave</string>

    <!-- ################################################### Pagina de Configuración-->
    <string name="TituloSesion">SESIÓN</string>
    <string name="TituloPersonal">PERSONAL</string>
    <string name="TituloTiendas">TIENDAS</string>
    <string name="CerrarSesion">Cerrar Sesión</string>
    <string name="Nombre_Tienda">Nombre:</string>
    <string name="Direccion">Dirección:</string>
    <string name="Telefono">Telefono:</string>
    <string name="Clave">Clave</string>
    <string name="Crear">Crear</string>
    <string name="Perfil">Perfil</string>
    <string name="Existentes">Existentes</string>

    <string-array name="Perfiles">
        <item></item>
        <item>Cajero</item>
        <item>Administrador</item>
        <item>Gerente</item>
    </string-array>


    <!-- ################################################### Pagina de guardar-->
    <string name="Cliente_Existente">CLIENTE EXISTENTE</string>
    <string name="Cliente_Nuevo">CLIENTE NUEVO</string>


    <string name="Buscar_Cliente">Buscar Cliente</string>
    <string name="Celular">Celular: </string>
    <string name="Deuda_Anterior">Deuda Anterior: </string>

    <string name="Esta_Cuenta">Esta Cuenta: </string>
    <string name="Deuda_Nueva">Deuda Nueva: </string>

    <string name="Nombre_Nuevo">Nombre: </string>
    <string name="Celular_Nuevo">Celular: </string>
    <string name="Descuento">¿Gana descuento? (%)</string>


    <string name="Solo_Guardar">SOLO GUARDAR</string>
    <string name="Imprimir_Ultimo">IMPRIMIR ESTE TICKET</string>
    <string name="Imprimir_Todo">IMPRIMIR TODO</string>
    <string name="Enviar_Ultimo">ENVIAR ESTE TICKET</string>
    <string name="Enviar_Todo">ENVIAR TODO</string>

    <string name="Cancelar_Guardar">CANCELAR</string>

    <string-array name="Decuentos">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
    </string-array>

    <!-- ################################################### Pagina de Productos-->
    <string name="TituloArticulos">ARTÍCULOS</string>
    <string name="TituloCategorias">CATEGORÍAS</string>
    <string name="Filtrar">Filtrar</string>
    <string name="AgregarArticulo">AGREGAR</string>
    <string name="NombreCategoria">Nombre de la nueva categoría</string>
    <string name="ColumnaNomCategoria">Categoría</string>
    <string name="ColumnaCantArticulos">Cant. de Artículos</string>
    <string name="ColumnaColorCategoria">Color</string>


    <string name="Volver">VOLVER</string>
    <string name="Guardar_Categoria">GUARDAR</string>
    <string name="Editar_Categoria">EDITAR</string>
    <string name="Eliminar_Categoria">ELIMINAR</string>


    <string name="Titulo_Articulo">CREACIÓN Y EDICIÓN DE ARTÍCULOS</string>
    <string name="Guardar_Articulo">Guardar Artículo</string>
    <string name="Editar_Articulo">Editar Artículo</string>
    <string name="Eliminar_Articulo">Eliminar Artículo</string>

    <string name="NombreArticulo">Nombre del nuevo artículo</string>

    <string name="TituloPrecios">CONFIGURACIÓN DE PRECIOS Y COSTOS</string>
    <string name="TituloVariantes">VARIANTES</string>
    <string name="TituloVisualizacion">VISUALIZACIÓN</string>

    <string name="PrecioArticulo">Precio de Venta</string>
    <string name="CostoArticulo">Costo de Venta</string>
    <!--<String name="ManejoPrecio">Deje el campo en blanco para indicar el precio durante la venta</String>-->
    <string name="ReferenciaArticulo">REF</string>
    <string name="CodigoBarrasArticulo">Código de Barras</string>
    <string name="DescuentoArticulo">Descuento (%)</string>
    <string name="StockArticulo">Stock</string>


    <string name="TipoVisualización">Visualización</string>
    <string name="ColorArticulo">Color</string>
    <string name="ImagenArticulo">Imagen</string>
    <string name="ValorCero">0</string>
    <string name="AgregarImagen"> + Img.</string>


    <string name="ColumnaNomArticulo">Artículo</string>
    <string name="ColumnaStock">STOCK</string>
    <string name="ColumnaPrecio">PRECIO</string>
    <string name="ColumnaCosto">COSTO</string>
    <string name="ColumnaMargen">MARGEN</string>

    <string-array name="Categorias">
        <item></item>
        <item>Bebidas</item>
        <item>Papeleria</item>
        <item>Vitrina</item>
    </string-array>


    <!-- ################################################### Pagina de Clientes-->

    <string name="Deuda_Actual">Deuda Actual: </string>
    <string name="CobrarTodo">COBRAR TODO</string>
    <string name="AbonarTodo">ABONAR</string>
    <string name="EliminarCliente">Eliminar Cliente</string>
    <string name="NombreClienteNuevo">Nuevo Cliente: </string>
    <string name="CelularClienteNuevo">Celular:</string>
    <string name="TituloCrearCliente">CREAR UN CLIENTE NUEVO</string>
    <string name="CrearCliente">CREAR CLIENTE</string>
    <string name="CobrarTicket">Cobrar Ticket</string>
    <string name="EliminarTicket">Eliminar Ticket</string>
    <string name="Reembolsar">Reembolsar Ticket</string>

</resources>
