<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="?attr/homeAsUpIndicator"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@android:drawable/ic_menu_week"
            android:title="@string/menu_turno" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@android:drawable/ic_input_add"
            android:title="@string/menu_clientes" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@android:drawable/btn_star_big_off"
            android:title="@string/menu_productoss" />
    </group>

    <item android:title="@string/menu_admon">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@android:drawable/sym_def_app_icon"
                android:title="@string/menu_usuarios" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/menu_config" />
        </menu>
    </item>

</menu>
