<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pagNewLogin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10">


        <EditText
            android:id="@+id/etUsuario"
            android:layout_width="500dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:inputType="textEmailAddress"
            android:hint="@string/Ingresar_eMail"
            android:textAlignment="center"/>

        <EditText
            android:id="@+id/etClave"
            android:layout_width="500dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:inputType="textPassword"
            android:hint="@string/Ingresar_Clave"
            android:textAlignment="center"/>
        <EditText
            android:id="@+id/etConfirmarClave"
            android:layout_width="500dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:inputType="textPassword"
            android:hint="@string/Ingresar_ConfirmarClave"
            android:textAlignment="center"/>

        <EditText
            android:id="@+id/etNombreTienda1"
            android:layout_width="500dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:inputType="text"
            android:hint="@string/NombreTienda"
            android:textAlignment="center"/>

        <EditText
            android:id="@+id/etDirTienda1"
            android:layout_width="500dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:inputType="text"
            android:hint="@string/DireccionTienda"
            android:textAlignment="center"/>
        <EditText
            android:id="@+id/etTelTienda1"
            android:layout_width="500dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:inputType="phone"
            android:hint="@string/TelefonoTienda"
            android:textAlignment="center"/>
        <Button
            android:id="@+id/bRegistrarse"
            android:layout_width="500dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            style="@style/botonAzul"
            android:text="@string/Registrarse"
            android:layout_gravity="center"/>
        <Button
            android:id="@+id/bVolver"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="start"
            style="@style/botonRojo"
            android:text="@string/Volver"/>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>