<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pagLogin"
    android:orientation="horizontal">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="10">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/etUsuario"
                android:layout_width="500dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:inputType="textEmailAddress"
                android:hint="@string/Ingresar_eMail"
                android:textAlignment="center"/>

            <EditText
                android:id="@+id/etClave"
                android:layout_width="500dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:inputType="textPassword"
                android:hint="@string/Ingresar_Clave"
                android:textAlignment="center"/>

            <Button
                android:id="@+id/bLogin"
                android:layout_width="500dp"
                android:layout_height="wrap_content"
                style="@style/botonVerde"
                android:text="@string/Login"
                android:layout_gravity="center"/>

            <LinearLayout
                android:layout_width="500dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:weightSum="10">
                <Button
                    android:id="@+id/bCancelar"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2.5"
                    android:textSize="20dp"
                    style="@style/botonRojo"
                    android:text="@string/CancelarLogin"
                    android:layout_gravity="center"/>
                <Spinner
                    android:id="@+id/spTienda"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:textAlignment="center">

                </Spinner>
                <Button
                    android:id="@+id/bIngresar"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2.5"
                    android:textSize="20dp"
                    style="@style/botonVerde"
                    android:text="@string/Ingresar"
                    android:layout_gravity="center"/>

            </LinearLayout>
            <TextView
                android:layout_width="500dp"
                android:layout_height="wrap_content"
                android:text="ó"
                android:textSize="24sp"
                android:textAlignment="center"
                android:layout_gravity="center"/>
            <Button
                android:id="@+id/bRegistrarse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/botonAzul"
                android:text="@string/Registrarse"
                android:layout_gravity="center"/>
            <Button
                android:id="@+id/bOlvideClave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/botonEnviar"
                android:textSize="12dp"
                android:text="@string/OlvideClave"
                android:layout_gravity="center"/>


        </LinearLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>