<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pagRecuperarClave">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:gravity="center"
        android:weightSum="10">

        <EditText
            android:id="@+id/etUsuario"
            android:layout_width="500dp"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:layout_gravity="center"
            android:inputType="textEmailAddress"
            android:hint="@string/Ingresar_eMail"
            android:textAlignment="center"/>


        <Button
            android:id="@+id/bReestablecer"
            android:layout_width="500dp"
            android:layout_height="0dp"
            android:layout_weight="4"
            style="@style/botonVerde"
            android:text="@string/ReestablecerClave"
            android:layout_gravity="center"/>
        <Button
            android:id="@+id/bVolver"
            android:layout_width="200dp"
            android:layout_height="0dp"
            android:layout_weight="2"
            style="@style/botonRojo"
            android:text="@string/Volver"
            android:layout_gravity="center"/>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>